@@ -1,6 +1,5 @@
 package ru.skypro.homework.service.impl;
 
-import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -11,14 +10,14 @@ import ru.skypro.homework.dto.CreateOrUpdateComment;
 import ru.skypro.homework.entity.AdEntity;
 import ru.skypro.homework.entity.CommentEntity;
 import ru.skypro.homework.entity.UserEntity;
-import ru.skypro.homework.mapper.CommentMapper;
+import ru.skypro.homework.mapper.mapper.CommentMapper;
 import ru.skypro.homework.repository.AdRepository;
 import ru.skypro.homework.repository.CommentRepository;
 import ru.skypro.homework.repository.UserRepository;
 import ru.skypro.homework.service.CommentService;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -33,13 +32,15 @@ public class CommentServiceImpl implements CommentService {
 
     @Override
     public Comments getComments(Integer adId) {
-        List<CommentEntity> commentEntities = commentRepository.findAllByAd_IdOrderByCreatedAtDesc(adId);
-        Comments comments = new Comments();
-        comments.setCount(commentEntities.size());
-        comments.setResults(commentEntities.stream()
+        List<CommentEntity> commentEntities = commentRepository.findByAd_Id(adId);
+        List<Comment> comments = commentEntities.stream()
                 .map(commentMapper::toDto)
-                .collect(Collectors.toList()));
-        return comments;
+                .toList();
+
+        Comments result = new Comments();
+        result.setCount(comments.size());
+        result.setResults(Collections.singletonList(comments));
+        return result;
     }
 
     @Override
@@ -51,7 +52,6 @@ public class CommentServiceImpl implements CommentService {
                 .orElseThrow(() -> new RuntimeException("User not found"));
 
         CommentEntity commentEntity = new CommentEntity();
-        commentEntity.setText(createOrUpdateComment.getText());
         commentEntity.setAd(ad);
         commentEntity.setAuthor(author);
 
@@ -63,10 +63,15 @@ public class CommentServiceImpl implements CommentService {
     public void deleteComment(Integer adId, Integer commentId, String username) {
         CommentEntity commentEntity = commentRepository.findByIdAndAd_Id(commentId, adId);
 
+        if (commentEntity == null) {
+            throw new RuntimeException("Comment not found");
+        }
+
         UserEntity user = userRepository.findByEmail(username)
                 .orElseThrow(() -> new RuntimeException("User not found"));
 
-        if (!commentEntity.getAuthor().getId().equals(user.getId())) {
+        if (!commentEntity.getAuthor().getId().equals(user.getId()) &&
+                !user.getRole().name().equals("ADMIN")) {
             throw new RuntimeException("Not enough permissions to delete comment");
         }
 
@@ -74,28 +79,25 @@ public class CommentServiceImpl implements CommentService {
     }
 
     @Override
-    public Comment updateComment(Integer adId, Integer commentId, CreateOrUpdateComment createOrUpdateComment, String username) {
+    public Comment updateComment(Integer adId, Integer commentId,
+                                 CreateOrUpdateComment createOrUpdateComment,
+                                 String username) {
         CommentEntity commentEntity = commentRepository.findByIdAndAd_Id(commentId, adId);
+
+        if (commentEntity == null) {
+            throw new RuntimeException("Comment not found");
+        }
 
         UserEntity user = userRepository.findByEmail(username)
                 .orElseThrow(() -> new RuntimeException("User not found"));
 
-        if (!commentEntity.getAuthor().getId().equals(user.getId())) {
+        if (!commentEntity.getAuthor().getId().equals(user.getId()) &&
+                !user.getRole().name().equals("ADMIN")) {
             throw new RuntimeException("Not enough permissions to edit comment");
         }
 
-        commentMapper.map(createOrUpdateComment, commentEntity);
+        commentMapper.updateFromDto(createOrUpdateComment, commentEntity);
         CommentEntity updatedComment = commentRepository.save(commentEntity);
         return commentMapper.toDto(updatedComment);
-    }
-
-    public boolean isCommentOwner(Integer commentId, String username) {
-        CommentEntity commentEntity = commentRepository.findById(commentId)
-                .orElseThrow(() -> new RuntimeException("Comment not found"));
-
-        UserEntity user = userRepository.findByEmail(username)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
-        return commentEntity.getAuthor().getId().equals(user.getId());
     }
 }
